<resources>
    <string name="app_name">Task List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_task">Создание задачи</string>
    <string name="date_pattern">xx.xx.xxxx</string>
    <string name="creator_name">Имя создателя</string>
    <string name="task_description">Описание задачи</string>
    <string name="task_name">Название</string>
    <string name="employee">Работник</string>
    <string name="pass">Пароль</string>
    <string name="login">Логин</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_tasks">Мои задачи</string>
    <string name="create_task_menu">Создать задачу</string>
    <string name="settings">Настройки</string>
    <string name="active_tasks_count">Количество активных задач : %d</string>
    <string name="auth_warning">Введите данные учетной записи выданные вам администратором, иначе обратитесь к нему для регистрации аккаунта</string>
    <string name="email">email</string>
    <string name="email_rus">Почта</string>
    <string name="name">Имя пользователя</string>
    <string name="phone">Номер телефона</string>
    <string name="full_name">ФИО полностью</string>
    <string name="position">Должность</string>
    <string name="registraion">Регистрация</string>
    <string name="accept">Войти</string>
    <string name="logout">Выйти</string>
    <string name="date_format">dd.MM.yyyy</string>
    <string name="current_position">Текущая должность: %s</string>
    <string name="current_task_count">Количество активных задач: %d</string>
    <string name="user_name">Имя пользователя: %s %s</string>
    <string name="name_info">Фамилия и Имя</string>
    <string name="allow_notification">Разрешить уведомления</string>
    <string name="task_sync">Синхронизация задач</string>
    <string name="empty_filter_task_list">Похоже на дату %s у вас нет задач</string>
    <string name="empty_total_task_list">Пока у вас нет новых задач</string>
    <string name="employees_tasks">Задачи сотрудников</string>
    <string-array name="positions">
        <item>Должность</item>
        <item>Преподаватель</item>
        <item>Системный администратор</item>
        <item>Работник кадровой службы</item>
        <item>Программист</item>
    </string-array>
    <string-array name="task_priority">
        <item>Приоритет задачи</item>
        <item>Выполнить до окончания срока</item>
        <item>Важная, выполнить быстрее</item>
        <item>Маскимальный приоритет</item>
    </string-array>
</resources>