<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_task"
            android:title="@string/my_tasks" />
        <item
            android:id="@+id/nav_create_task"
            android:icon="@drawable/icon_add_task"
            android:title="@string/create_task_menu" />
        <item
            android:id="@+id/nav_employee_tasks"
            android:icon="@drawable/icon_statistics"
            android:title="@string/employees_tasks"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/logout"/>
    </group>
</menu>