<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pavel.databaseapp.mytask.MyTaskFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_create_task"
        android:name="com.pavel.databaseapp.createtask.CreateTaskFragment"
        android:label="@string/create_task_menu"
        tools:layout="@layout/fragment_create_task" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.pavel.databaseapp.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.pavel.databaseapp.auth.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout"/>
    <fragment
        android:id="@+id/nav_employee_tasks"
        android:name="com.pavel.databaseapp.employestasks.EmployeeFragment"
        android:label="@string/employees_tasks"
        tools:layout="@layout/fragment_employees"/>
</navigation>