<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateTaskFragment"
    android:padding="15dp">



    <LinearLayout
        android:id="@+id/text_info_container"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center|top"
        android:layout_marginTop="95dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_task"
            android:textSize="17sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                app:boxStrokeWidth="2dp"
                app:shapeAppearance="@style/Rounded.top">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/employee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/employee"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>
        <ImageButton
            android:id="@+id/search_employee"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            app:tint="@color/icon_color"
            android:src="@drawable/icon_search_thin"
            android:background="@drawable/ripple_custom"/>

    </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_name"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="250dp"
        android:layout_marginBottom="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="250dp"
            android:hint="@string/task_description"/>
    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/date_range_container"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/text_info_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ImageButton
            android:id="@+id/date_range"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon_date_range_thin"
            app:tint="@color/icon_color"
            android:background="@drawable/ripple_custom" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/chosen_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:hint="@string/date_pattern"/>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/creator_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:hint="@string/creator_name"
        android:layout_marginRight="75dp"
        app:layout_constraintTop_toBottomOf="@id/date_range_container"
        app:layout_constraintRight_toRightOf="parent"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/send_task_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        app:maxImageSize="35dp"
        android:src="@drawable/icon_send_task_mail"
        app:borderWidth="0dp"
        android:foregroundTint="@color/float_button_color"
        android:backgroundTint="@color/float_button_color"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>