<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.SlideshowFragment"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingTop="25dp">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Настройки приложения"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
        <LinearLayout
            android:id="@+id/main_settings_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/item_bottom_border"
            app:layout_constraintTop_toBottomOf="@id/app_settings"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/current_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Текущая тема"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/allow_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Разрешить уведомления"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Пользователь"
        android:textSize="20sp"
        android:paddingTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/main_settings_container"
        app:layout_constraintLeft_toLeftOf="parent" />
    <LinearLayout
        android:id="@+id/account_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/item_bottom_border"
        android:paddingTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/user_info">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:paddingTop="10dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position"
            android:textSize="18sp"
            android:paddingTop="15dp"
            android:textColor="@color/black"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/active_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_task_count"
            android:textSize="18sp"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>